# lightpaper

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  AGENTS.md  API_DESIGN.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLATFORM.md  README.md  SECURITY.md  VIRAL_GROWTH.md  docker-compose.yml  glama.json  init.sql  migrate_credentials.sql  publish_blog_posts.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  smithery.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude.yml  publish-pypi.yml
Chaconne/: PLAN.md  character-biographies.md  historical-biographies-and-structure.md  research-bach-chaconne.md  research-perth.md  research-stradivarius.md  research-violin-pedagogy.md  wave1-chapters-9-15.md  wave1-climax-outline.md  wave1-complete.md  wave1-scene-outline-ch16-24.md  wave1-scene-outline.md  wave2-chapters-16-24.md  wave2-chapters-9-15.md  wave2-complete.md  wave2-openings-climax.md  wave2-openings.md
Chaconne/draft/: ch01-the-view-from-marine-parade.md  ch02-nedlands-1987.md  ch03-the-gaggle.md  ch04-the-fund.md  ch05-rottnest.md  ch06-the-terrace.md  ch07-what-jeannie-doesnt-know.md  ch08-the-trip.md  ch09-kothen-july-1720.md  ch10-london-paris.md  ch11-absam.md  ch12-vienna.md  ch13-home.md  ch14-the-restoration.md  ch15-first-lesson.md  ch16-cremona-1715.md  ch17-the-cliff-face.md  ch18-recordings.md  ch19-the-soundproofed-room.md  ch20-injuries.md  ch21-busking.md  ch22-the-gap.md  ch23-the-authentication.md  ch24-the-invitation.md  ch25-kothen-autumn-1720.md  ch27-the-chaconne.md  (+5 more)
app/: auth.py  config.py  database.py  id_gen.py  main.py  models.py  rate_limit.py  schemas.py  utils.py
deploy/: deploy-cloud-run.sh  setup-cloud-sql.sh
drafts/: article-content.md  backlink-posts.md  first-and-second-order-ai.md  research-pass-2-production-functions-at-scale.md  research_pass_3_four_machines.md  the-production-function-rewritten-v2.md  the-production-function-rewritten.md  what-will-ai-do-to-my-job.md
lightpaper_mcp/: README.md  __main__.py  pyproject.toml  server.json
lightpaper_mcp/lightpaper_mcp/: __init__.py  server.py
mcp/: server.py
migrations/: 001_auth_sessions.sql  002_credentials_table.sql  003_format_rename.sql  004_linkedin_url.sql  005_google_indexing.sql  006_clear_deleted_slugs.sql  007_books.sql  014_book_slug_partial_unique.sql  015_writing_ide.sql  016_narration.sql  017_jon_pro.sql  018_license.sql  019_assets.sql
scripts/: bootstrap_account.py
tests/: conftest.py  test_assets.py  test_content_negotiation.py  test_gravity.py  test_publish.py  test_quality.py  test_renderer.py  test_search.py  test_security.py
(+103 files in other folders)
