[project]
name = "lightpaper"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "S",   # bandit security
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # Depends() in function defaults — standard FastAPI pattern
    "B904",  # raise from in except — not needed for HTTP error re-raises
    "S105",  # false positive on URL constants containing "token"
    "S110",  # try-except-pass — acceptable for DNS/Firebase cleanup
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "B017"]  # allow assert + broad exception in tests
"app/routes/discovery.py" = ["E501"]  # llms.txt has long documentation lines
"app/main.py" = ["E402"]  # imports after app init are intentional
"mcp/server.py" = ["E501"]  # MCP tool descriptions are long by design
"scripts/**/*.py" = ["E501"]  # scripts have long output lines
