[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightpaper-mcp"
version = "0.1.0"
description = "MCP server for lightpaper.org — API-first publishing platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Jon Gregory", email = "hello@lightpaper.org" }]
keywords = ["mcp", "lightpaper", "publishing", "ai", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.3.0",
    "httpx>=0.28.0",
]

[project.scripts]
lightpaper-mcp = "lightpaper_mcp:run"

[project.urls]
Homepage = "https://lightpaper.org"
Repository = "https://github.com/lightpaper-org/lightpaper"
Documentation = "https://lightpaper.org/llms.txt"
Issues = "https://github.com/lightpaper-org/lightpaper/issues"
